Update README and UI to reflect removal of .docx support: adjust file upload instructions and hints, and streamline job processing to accept only PDF files.

--- a/web/index.html
+++ b/web/index.html
@@ -90,10 +90,10 @@
       </div>
       <div class="modal-body">
         <div class="upload-area">
-          <input id="file" type="file" accept=".pdf,.docx" />
+          <input id="file" type="file" accept=".pdf" />
           <div class="upload-icon"><i data-lucide="file-plus"></i></div>
           <div class="upload-text">选择或拖拽文件</div>
-          <div class="upload-hint">支持 .pdf, .docx 格式</div>
+          <div class="upload-hint">支持 .pdf 格式</div>
         </div>
         <button id="uploadBtn" class="btn btn-primary" style="width: 100%; margin-top: 16px;">
           开始分析文本
